--- a/README.org
+++ b/README.org
@@ -79,3 +79,15 @@ cargo make run
 * Acknowledgments
 - Inspired by the need for scalable, maintainable microservice architectures in Rust.
 - Built with love by the Rust community.
+
+
+https://github.com/launchbadge/sqlx/blob/main/sqlx-cli/README.md
+
+cargo install sqlx-cli --version 0.7.4
+
+Migration:
+sqlx migrate add -r create_users_table --source ./crates/jd_infra/migrations/
+sqlx migrate run --source ./crates/jd_infra/migrations/ --database-url postgres://postgres:password@localhost:5444/postgres
+sqlx migrate info --source ./crates/jd_infra/migrations/ --database-url postgres://postgres:password@localhost:5444/postgres
+sqlx migrate revert --source ./crates/jd_infra/migrations/ --database-url postgres://postgres:password@localhost:5444/postgres
+
